--- a/services/GatewayService/GatewayService.Server/appsettings.Development.json
+++ b/services/GatewayService/GatewayService.Server/appsettings.Development.json
@@ -18,6 +18,11 @@
         }
       }
     ]
+  },
+  "HttpClientConfig": {
+    "LibraryServiceUrl": "http://127.0.0.1:8060",
+    "RatingServiceUrl": "http://127.0.0.1:8050",
+    "ReservationServiceUrl": "http://127.0.0.1:8070"
   }
 }
 
