--- a/services/GatewayService/GatewayService.Server/Properties/launchSettings.json
+++ b/services/GatewayService/GatewayService.Server/Properties/launchSettings.json
@@ -1,13 +1,13 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "PersonService.Server.Http": {
+    "GatewayService.Server.Http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "http://localhost:5000"
+        "ASPNETCORE_URLS": "http://localhost:8080"
       }
     }
   }
