--- a/services/ReservationService/ReservationService.Server/Properties/launchSettings.json
+++ b/services/ReservationService/ReservationService.Server/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "PersonService.Server.Http": {
+    "ReservationService.Server.Http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
