--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -44,7 +44,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8060
-      - ConnectionStrings__DefaultConnection=Host=LibraryServiceDb;Port=5432;Database=postgres;Username=postgres;Password=postgres
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=LibraryServiceDb;Username=postgres;Password=postgres
 
   rating-service:
     image: rating-service:test
@@ -57,7 +57,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8050
-      - ConnectionStrings__DefaultConnection=Host=RatingServiceDb;Port=5432;Database=postgres;Username=postgres;Password=postgres
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=RatingServiceDb;Username=postgres;Password=postgres
 
   reservation-service:
     image: reservation-service:test
@@ -70,7 +70,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8070
-      - ConnectionStrings__DefaultConnection=Host=ReservationServiceDb;Port=5432;Database=postgres;Username=postgres;Password=postgres
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=ReservationServiceDb;Username=postgres;Password=postgres
 
 networks:
   default:
