--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -108,11 +108,11 @@ jobs:
           echo "=== Reservation Logs ==="
           docker compose -f docker-compose.test.yml logs reservation-service
 
-      - name: Run Postman Tests
+      - name: Run API Tests
         uses: matt-ball/newman-action@master
         with:
-          collection: postman/[inst] Lab1.postman_collection.json
-          environment: postman/[inst][local] Lab1.postman_environment.json
+          collection: v4/postman/collection.json
+          environment: v4/postman/environment.json
           delayRequest: 100
           reporters: '[ "cli" ]'
 
