--- a/services/GatewayService/src/GatewayService.Server/appsettings.json
+++ b/services/GatewayService/src/GatewayService.Server/appsettings.json
@@ -1,9 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      }
+    ]
   },
-  "AllowedHosts": "*"
+  "HttpClientConfig": {
+    "LibraryServiceUrl": "http://library-service:8060",
+    "RatingServiceUrl": "http://rating-service:8050",
+    "ReservationServiceUrl": "http://reservation-service:8070"
+  }
 }
+
