--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8080
       - HttpClientConfig__LibraryServiceUrl=http://library-service:8060
       - HttpClientConfig__RatingServiceUrl=http://rating-service:8050
@@ -40,7 +40,8 @@ services:
     ports:
       - "8060:8060"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - INIT_DATABASE=true
+      - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8060
       - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=LibraryServiceDb;Username=postgres;Password=postgres
 
@@ -53,7 +54,8 @@ services:
     ports:
       - "8050:8050"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - INIT_DATABASE=true
+      - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8050
       - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=RatingServiceDb;Username=postgres;Password=postgres
 
@@ -66,7 +68,7 @@ services:
     ports:
       - "8070:8070"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8070
       - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=ReservationServiceDb;Username=postgres;Password=postgres
 
